# test-words-api-python-sdk

./: README.md  pyproject.toml
doc/: abstract-logger.md  client.md
doc/controllers/: ap-is.md
tests/controllers/: test_ap_is_controller.py
wordsapi/: __init__.py  configuration.py  wordsapi_client.py
wordsapi/controllers/: ap_is_controller.py
wordsapi/logging/: sdk_logger.py
wordsapi/logging/configuration/: api_logging_configuration.py
wordsapi/models/: __init__.py
